Improve dependency check of simpleName - not working for more than test file